Create and use a CLock component

--- a/Notes2022/Client/Menus/NavMenu.razor
+++ b/Notes2022/Client/Menus/NavMenu.razor
@@ -22,7 +22,7 @@
     **
     **--------------------------------------------------------------------------*@
 
-<span class="clockcolor">@mytime &nbsp;</span>
+<span class="clockcolor"><Notes2022.Client.Comp.Clock Interval="10000"></Notes2022.Client.Comp.Clock> &nbsp;</span>
 <div class="top-row ps-4 navbar">
     <SfMenu Items="@menuItemsTop" @ref="@topMenu" CssClass="e-std-menu" >
             <MenuEvents TValue="MenuItem" ItemSelected="@OnSelect" ></MenuEvents>
