--- a/Notes2022/Client/Pages/NoteIndex.razor
+++ b/Notes2022/Client/Pages/NoteIndex.razor
@@ -76,6 +76,7 @@ else                    @*    Index mode        *@
                                 <DetailTemplate>
                                     @{
                                         var current = (context as GNoteHeader);
+                                        current = current is not null ? current : new();
                                         List<GNoteHeader>? Resp = null;
                                         if ( current.ResponseCount > 0 ) {
                                             Resp = Model.AllNotes.List.Where(p => p.NoteOrdinal == current.NoteOrdinal && p.ResponseOrdinal != 0 && p.IsDeleted == false && p.Version == 0).OrderBy(p => p.ResponseOrdinal).ToList();
@@ -98,8 +99,9 @@ else                    @*    Index mode        *@
                                 <GridColumn Field=@nameof(GNoteHeader.AuthorName) HeaderText="Writer" TextAlign="TextAlign.Left" Width="80"></GridColumn>
                                 <GridColumn Field=@nameof(GNoteHeader.CreateDate) HeaderText="Date/Time" TextAlign="TextAlign.Left" Width="60">
                                     <Template Context="inner">
-                                        @{
+                            @{
                                             var itemx = (inner as GNoteHeader);
+                                            itemx = itemx is not null ? itemx : new();
                                             <span>@Globals.LocalTimeBlazor(itemx.CreateDate.ToDateTime())</span>
                                         }
                                     </Template>
