--- a/Notes2022/Client/Pages/Reload.razor
+++ b/Notes2022/Client/Pages/Reload.razor
@@ -6,7 +6,7 @@
 
 @code {
 
-    protected override async Task OnParametersSetAsync()
+    protected override void OnParametersSet()
     {
         Navigation.NavigateTo("");
     }
