--- a/Notes2022/Client/App.razor
+++ b/Notes2022/Client/App.razor
@@ -1,4 +1,41 @@
-﻿@implements IAsyncDisposable
+﻿@*
+// ***********************************************************************
+// Assembly         : Notes2022.Client
+// Author           : Dale Sinder
+// Created          : 05-08-2022
+//
+// Last Modified By : Dale Sinder
+// Last Modified On : 05-10-2022
+//
+// Copyright © 2022, Dale Sinder
+//
+// Name: App.razor
+//
+// Description:
+//      The root of the application - provides routing in .razor file and
+//      login/cookie managment for app
+//
+// This program is free software: you can redistribute it and/or modify
+// it under the terms of the GNU General Public License version 3 as
+// published by the Free Software Foundation.   
+//
+// This program is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.See the
+// GNU General Public License version 3 for more details.
+//
+//  You should have received a copy of the GNU General Public License
+//  version 3 along with this program in file "license-gpl-3.0.txt".
+//  If not, see<http://www.gnu.org/licenses/gpl-3.0.txt>.
+// ***********************************************************************
+// <copyright file="App.razor" company="Notes2022.Client">
+//     Copyright (c) Dale Sinder. All rights reserved.
+// </copyright>
+// ***********************************************************************
+// <summary></summary>
+*@
+
+@implements IAsyncDisposable
 
 @inject Notes2022Server.Notes2022ServerClient Client
 @inject IJSRuntime JS;
