--- a/Notes2022/Client/Pages/Admin/NotesFilesAdmin.razor
+++ b/Notes2022/Client/Pages/Admin/NotesFilesAdmin.razor
@@ -74,7 +74,7 @@ else
                                 @Globals.LocalTimeBlazor(file.LastEdited.ToDateTime()).ToShortTimeString() @Globals.LocalTimeBlazor(file.LastEdited.ToDateTime()).ToShortDateString()
                             </td>
                             <td>
-                                @(uList is not null ? uList : new()).Find(p => p.Id == file.OwnerId).DisplayName
+                                @(uList.Find(p => p.Id == file.OwnerId).DisplayName)
                             </td>
                             <td>
                                 @file.Id
