--- a/Notes2022/Client/Pages/Admin/NotesFilesAdmin.razor
+++ b/Notes2022/Client/Pages/Admin/NotesFilesAdmin.razor
@@ -61,7 +61,7 @@ else
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (GNotefile file in files.Notefiles)
+                    @foreach (GNotefile file in files.List)
                     {
                         <tr>
                             <td>
