--- a/Notes2022/Client/Pages/NotesFiles.razor
+++ b/Notes2022/Client/Pages/NotesFiles.razor
@@ -38,7 +38,7 @@
 }
 else
 {
-    <SfGrid DataSource="@Files.Notefiles" EnableAltRow="true" AllowPaging="true" AllowSelection="true" EnableHover="true" AllowSorting="true" Toolbar="@(new List<object>() { "Print" })">
+    <SfGrid DataSource="@Files.List" EnableAltRow="true" AllowPaging="true" AllowSelection="true" EnableHover="true" AllowSorting="true" Toolbar="@(new List<object>() { "Print" })">
         <GridPageSettings PageSize="12" PageSizes="true"></GridPageSettings>
         <GridEvents RowSelected="DisplayIt" TValue="GNotefile"></GridEvents>
         <GridColumns>
