Prep for reading local files

--- a/Notes2022/Client/_Imports.razor
+++ b/Notes2022/Client/_Imports.razor
@@ -14,6 +14,8 @@
 @using Blazored.Modal
 @using Blazored.Modal.Services
 
+@using W8lessLabs.Blazor.LocalFiles
+
 @using Syncfusion.Blazor
 @using Syncfusion.Blazor.Navigations
 @using Syncfusion.Blazor.Buttons
