Import files from clinet side file system by uploading to a memory file on server.

--- a/Notes2022/Client/Pages/Admin/NotesFilesAdmin.razor
+++ b/Notes2022/Client/Pages/Admin/NotesFilesAdmin.razor
@@ -83,12 +83,14 @@ else
                                 <button @onclick="@(() => EditNoteFile(file.Id))">Edit</button>
                                 <button @onclick="@(() => NoteFileDetails(file.Id))">Details</button>
                                 <button @onclick="@(() => DeleteNoteFile(file.Id))">Delete</button>
-                                <button @onclick="@(() => ImportNoteFile(file.Id))">Import</button>
+                                <button @onclick="@(() => ImportNoteFile2(file.Id))">Import</button>
                              </td>
                         </tr>
                     }
 
                 </tbody>
+
+                    <FileSelect @ref="fileSelect" FilesSelected="FilesSelectedHandler" Accept=".txt"></FileSelect>
 
             </table>
 
